package com.cjj.designpattern.behavioral.mediator;

import java.awt.*;
import java.awt.event.ItemEvent;
import java.awt.event.ItemListener;

/**
 * Created by chenjj on 2018/12/29
 */
public class ColleagueCheckbox extends Checkbox implements ItemListener,Colleague {
    private Mediator mediator;
    public ColleagueCheckbox(String caption,CheckboxGroup group,boolean state){
        super(caption,group,state);
    }

    @Override
    public void setMediator(Mediator mediator) {
        this.mediator=mediator;

    }

    @Override
    public void setColleagueEnable(boolean enabled) {
        setEnabled(enabled);

    }

    @Override
    public void itemStateChanged(ItemEvent e) {
        mediator.colleagueChanged();

    }
}
