package com.cjj.designpattern.behavioral.mediator;

import java.awt.*;
import java.awt.event.TextEvent;
import java.awt.event.TextListener;

/**
 * Created by chenjj on 2018/12/29
 */
public class ColleagueTextField extends TextField implements TextListener,Colleague {
    private Mediator mediator;
    public ColleagueTextField(String text,int columns){
        super(text,columns);
    }

    @Override
    public void setMediator(Mediator mediator) {
        this.mediator=mediator;

    }

    @Override
    public void setColleagueEnable(boolean enabled) {
        setEnabled(enabled);
        setBackground(enabled? Color.white:Color.lightGray);

    }

    @Override
    public void textValueChanged(TextEvent e) {
        mediator.colleagueChanged();

    }
}
