package com.cjj.designpattern.behavioral.mediator;

/**
 * Created by chenjj on 2018/12/29
 */
public interface Mediator {
    public abstract void createColleagues();
    public abstract void colleagueChanged();
}
